attempt at font

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 ---
-
+<link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Tangerine">
 <div class="home">
 
   <center><b>Welcome to the Brain-Body Dynamics Lab</b></center>
