--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@ layout: default
   Our diverse experimental arsenal ranges from EMG recording and custom-made virtual reality modules, detailed characterization of multifinger structure and function, to mapping the function of the human brain with fMRI. These procedures in turn inform theoretical work to characterize complex sensorimotor function through rigorous and anatomically faithful mathematical models.
 </br></br>
   <b> PostDoc Position Available </b></br>
-  <a href="flyers/postdocAd.pdf">Download Job Opportunity PDF</>
+  <a href="flyers/postdocAd.pdf">Download Job Opportunity PDF</a>
+<br>
+<br>
+<br>
+
+<div><p>
+    Ronald Tutor Hall, RTH-421<br>
+    3710 S. McClintock Ave<br>
+    Los Angeles, CA 90089-2905, USA<br>
+    (213) 740-4219<br>
+    Fax: (213) 821-5696
+  </p>
+</div>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3306.924975500565!2d-118.29214788478588!3d34.02013668061464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c7fc9ad4d9bd%3A0x7f0dfd17fcb6ec29!2s3710+McClintock+Ave%2C+Los+Angeles%2C+CA+90089!5e0!3m2!1sen!2sus!4v1453572044486" width="100%" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+
+
 
 </div>
