--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@ layout: default
 ---
 <div class="home">
 
-  <center><b>Welcome to the Brain-Body Dynamics Lab</b></center>
+  <div style="padding-bottom:40px">
+    <center><b>Welcome to the Brain-Body Dynamics Lab</b></center>
 
   Our laboratory is dedicated to understanding the biomechanics, neuromuscular control and clinical rehabilitation of human mobility, with an emphasis on dexterous hand function. Towards this end, we employ a synergy of experimental and theoretical techniques.
   Our diverse experimental arsenal ranges from EMG recording and custom-made virtual reality modules, detailed characterization of multifinger structure and function, to mapping the function of the human brain with fMRI. These procedures in turn inform theoretical work to characterize complex sensorimotor function through rigorous and anatomically faithful mathematical models.
+  <a href="fundamentals"><img width=25% style="float:right" src="img/book_cover.png"></a>
 </br></br>
   <b> PostDoc Position Available </b></br>
   <a href="flyers/postdocAd.pdf">Download Job Opportunity PDF</a>
 <br>
 
-
+</div>
 <div><p>
     Ronald Tutor Hall, RTH-421<br>
     3710 S. McClintock Ave<br>
