--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ layout: default
   Our laboratory is dedicated to understanding the biomechanics, neuromuscular control and clinical rehabilitation of human mobility, with an emphasis on dexterous hand function. Towards this end, we employ a synergy of experimental and theoretical techniques.
   Our diverse experimental arsenal ranges from EMG recording and custom-made virtual reality modules, detailed characterization of multifinger structure and function, to mapping the function of the human brain with fMRI. These procedures in turn inform theoretical work to characterize complex sensorimotor function through rigorous and anatomically faithful mathematical models.
   <a href="fundamentals"><img width=25% style="float:right" src="img/book_cover.png"></a>
+  <a href="supplemental_sites/jnp2017"><img width=25% style="float:right" src="img/feasibility_button.png"></a>
 </br></br>
   <b> PostDoc Position Available </b></br>
   <a href="flyers/postdocAd.pdf">Download Job Opportunity PDF</a>
@@ -19,8 +20,7 @@ layout: default
     Ronald Tutor Hall, RTH-421<br>
     3710 S. McClintock Ave<br>
     Los Angeles, CA 90089-2905, USA<br>
-    (213) 740-4219<br>
-    Fax: (213) 821-5696
+    (213) 740-4219 ; Fax: (213) 821-5696
   </p>
 </div>
 
