--- a/G2P.html
+++ b/G2P.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    <meta http-equiv="refresh" content="0; url=/supplemental_sites/g2p/">
-    <link rel="canonical" href="/supplemental_sites/g2p/" />
+    <meta http-equiv="refresh" content="0; url=/g2p/">
+    <link rel="canonical" href="/g2p/" />
     </head>
 </html>
