added link for frontpage

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@ layout: default
   
 </table>
 
-  
+  </br></br>
+  <b> General to Particular Algorithm (G2P) </b></br>
+  <a href="/g2p/">Companion website to Nature Machine Intelligence Paper</a>
+<br>
+
 
 
 </br></br>
