--- a/g2p.html
+++ b/g2p.html
@@ -1,7 +1,7 @@
-<!-- <html>
+<html>
     <head>
     <meta http-equiv="refresh" content="0; url=/g2p/">
     <link rel="canonical" href="/g2p/" />
     </head>
-</html> -->
-<a href="valerolab.org/g2p/">Click Here for the G2P website</a>
+</html>
+<!-- <a href="https://valerolab.org/g2p/">Click Here for the G2P website</a> -->
