--- a/marjani/index.html
+++ b/marjani/index.html
@@ -1,65 +1,45 @@
-<!DOCTYPE html>
-<html>
-<head>
-<style>
+---
+layout: default
+---
+<div class="home">
 
-div.relative {
-  position: relative;
-  left: 30px;
-  border: 3px
-}
-img {
-  border-radius: 5%;
-}
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-}
+  <div style="padding-bottom:40px">
+    <center><b>Welcome to the Brain-Body Dynamics Lab</b></center>
 
-li {
-  float: left;
-}
+  Our laboratory is dedicated to understanding the biomechanics, neuromuscular control and clinical rehabilitation of human mobility, with an emphasis on dexterous hand function. Towards this end, we employ a synergy of experimental and theoretical techniques.
+  Our diverse experimental arsenal ranges from EMG recording and custom-made virtual reality modules, detailed characterization of multifinger structure and function, to mapping the function of the human brain with fMRI. These procedures in turn inform theoretical work to characterize complex sensorimotor function through rigorous and anatomically faithful mathematical models.
+  <table style="width:100%">
+  <tr>
+    <th><a href="fundamentals"><img width=47% style="float:center" src="img/book_cover.png"></a></th>
+    <th>  <a href="g2p"><img width=100% style="float:center" src="img/nmi.png"></a></th> 
+    <th>  <a href="supplemental_sites/feasibility_theory_frontiers_2018"><img width=65% style="float:center" src="img/feasibility_button.png"></a></th>
+  </tr>
+  
+</table>
 
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
+  </br></br>
+  <b> General to Particular Algorithm (G2P) </b></br>
+  <a href="/g2p/">Companion website to Nature Machine Intelligence Paper</a>
+<br>
 
-li a:hover:not(.active) {
-  background-color: #111;
-}
 
-.active {
-  background-color: #4CAF50;
-}
-</style>
-</head>
-<body>
 
-<ul>
-  <li><a class="active" href="index.html">Home</a></li>
-  <li><a href="projects.html">Projects</a></li>
-  <li><a href="on_the_news.html">On the news</a></li>
-  <li><a href="publications.html">Publications</a></li>
-  <li><a href="cv_resume.html">CV/Resume</a></li>
-  <li><a href="contacts.html">Contact</a></li>
-</ul>
+</br></br>
+  <b> PostDoc Position Available </b></br>
+  <a href="flyers/postdocAd.pdf">Download Job Opportunity PDF</a>
+<br>
 
-<p>
-<img src="./assets/full_small.jpg" alt="Ali Marjaninejad"  style="float:left;width:540px;height:810px;">
-<div class="relative">
-<h1>&nbsp; Welcome!</h1>
-This div element has position: relative;
 </div>
-</p> 
-</p>
+<div><p>
+    Ronald Tutor Hall, RTH-421<br>
+    3710 S. McClintock Ave<br>
+    Los Angeles, CA 90089-2905, USA<br>
+    (213) 740-4219 ; Fax: (213) 821-5696
+  </p>
+</div>
 
-</body>
-</html>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3306.924975500565!2d-118.29214788478588!3d34.02013668061464!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80c2c7fc9ad4d9bd%3A0x7f0dfd17fcb6ec29!2s3710+McClintock+Ave%2C+Los+Angeles%2C+CA+90089!5e0!3m2!1sen!2sus!4v1453572044486" width="100%" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
 
+
+
+</div>
