Ali uploads his page

--- a/marjani/projects.html
+++ b/marjani/projects.html
@@ -83,7 +83,7 @@ li a:hover:not(.active) {
 <br />
   <table style="width:100%">
   <tr>
-    <td>  <a href="https://valerolab.org/g2p/"><img src="./assets/nmi_e.png" width="300" height="300" title="G2P" alt="G2P"></a></td>
+    <td>  <a href="https://valerolab.org/g2p/"><img src="./assets/nmi_e.png" width="300" height="300" alt="G2P"></a></td>
     <td>  
       <p>
         <h1 style = "font-family:georgia,garamond,serif;font-size:18px;">Bio-inspired Autonomous Robotics:</h1><br />
@@ -93,7 +93,7 @@ li a:hover:not(.active) {
   </tr>
 
   <tr>
-    <td>  <a href="https://link.springer.com/chapter/10.1007/978-3-319-93870-7_2"><img src="./assets/stars_e.png" width="300" height="300" title="stars" alt="stars"></a></td>
+    <td>  <a href="https://link.springer.com/chapter/10.1007/978-3-319-93870-7_2"><img src="./assets/stars_e.png" width="300" height="300" alt="stars"></a></td>
     <td>  
       <p>
         <h1 style = "font-family:georgia,garamond,serif;font-size:18px;">Studying Biological Systems:</h1><br />
@@ -103,7 +103,7 @@ li a:hover:not(.active) {
   </tr>
 
   <tr>
-    <td>  <img src="./assets/applications.gif" width="300" height="300" title="Google Scholar Profile" alt="Google Scholar Profile"></td>
+    <td>  <img src="./assets/applications.gif" width="300" height="300" alt="Biomedical applications gif"></td>
     <td>  
       <p>
         <h1 style = "font-family:georgia,garamond,serif;font-size:18px;">Biomedical Applications:</h1><br />
@@ -114,6 +114,7 @@ li a:hover:not(.active) {
 
 
 </table>
+<br /><br /><br /><br />
 
 </div>
 </div>
