--- a/marjani/publications.html
+++ b/marjani/publications.html
@@ -92,15 +92,15 @@ li a:hover:not(.active) {
 <h2 style = "font-family:georgia,garamond,serif;font-size:18px;">&nbsp;</h2>
 <h2 style = "font-family:georgia,garamond,serif;font-size:18px;">Journal Publications:</h2>
 <ol style = "font-size:20px";>
-  <li>Marjaninejad, A., Urbina-Meléndez, D., Cohn, B. A., & Valero-Cuevas, F. J. (2019). Autonomous functional movements in a tendon-driven limb via limited experience. Nature Machine Intelligence, 1(3), 144–154. https://doi.org/10.1038/s42256-019-0029-0</li><br />
-  <li>Khazaei, M., Geramipour, A. H., Sadat-Hosseini, S. H., & Marjaninejad, A. (2018). Blood Glucose Regulation Using Adaptive Fuzzy Sliding Mode Control in Type I Diabetic Patients. Int J Mechatron Electr Comput Technol, 8(28), 3833–3846.</li><br />
-  <li>Geramipour, A., Khazaei, M., Marjaninejad, A., & Khazaei, M. (2013). Design of FPGA-based digital PID controller using Xilinx SysGen® for regulating blood glucose level of type-I diabetic patients. Int J Mechatron Electr Comput Technol, 3(7), 56–69.</li><br />
+  <li>Marjaninejad, A., Urbina-Meléndez, D., Cohn, B. A., & Valero-Cuevas, F. J. (2019). Autonomous functional movements in a tendon-driven limb via limited experience. Nature Machine Intelligence, 1(3), 144&#8212;154. https://doi.org/10.1038/s42256-019-0029-0</li><br />
+  <li>Khazaei, M., Geramipour, A. H., Sadat-Hosseini, S. H., & Marjaninejad, A. (2018). Blood Glucose Regulation Using Adaptive Fuzzy Sliding Mode Control in Type I Diabetic Patients. Int J Mechatron Electr Comput Technol, 8(28), 3833&#8212;3846.</li><br />
+  <li>Geramipour, A., Khazaei, M., Marjaninejad, A., & Khazaei, M. (2013). Design of FPGA-based digital PID controller using Xilinx SysGen&reg; for regulating blood glucose level of type-I diabetic patients. Int J Mechatron Electr Comput Technol, 3(7), 56&#8212;69.</li><br />
 </ol> 
 
 <h2 style = "font-family:georgia,garamond,serif;font-size:18px;">&nbsp;</h2>
 <h2 style = "font-family:georgia,garamond,serif;font-size:18px;">Peer-reviewed Book Chapters:</h2>
 <ol style = "font-size:20px";>
-  <li>1-  Marjaninejad, A., & Valero-Cuevas, F. J. (2019). Should Anthropomorphic Systems be ``Redundant’’? In G. Venture, J.-P. Laumond, & B. Watier (Eds.), Biomechanics of Anthropomorphic Systems (pp. 7–34). https://doi.org/10.1007/978-3-319-93870-7_2</li><br />
+  <li>1-  Marjaninejad, A., & Valero-Cuevas, F. J. (2019). Should Anthropomorphic Systems be "Redundant"? In G. Venture, J.-P. Laumond, & B. Watier (Eds.), Biomechanics of Anthropomorphic Systems (pp. 7&#8212;34). https://doi.org/10.1007/978-3-319-93870-7_2</li><br />
 </ol> 
 
 <h2 style = "font-family:georgia,garamond,serif;font-size:18px;">&nbsp;</h2>
@@ -108,10 +108,10 @@ li a:hover:not(.active) {
 <ol style = "font-size:20px";>
   <li>Marjaninejad, Ali, Annigeri, R., & Valero-Cuevas, F. J. (2018). Model-Free Control of Movement in a Tendon-Driven Limb via a Modified Genetic Algorithm. Engineering in Medicine and Biology Society (EMBC), 2018 40th Annual International Conference of the IEEE.</li><br />
   <li>Marjaninejad, Ali, Berry, J., & Valero-Cuevas, F. J. (2018). An Analytical Approach to Posture-Dependent Muscle Force and Muscle Activation Patterns. Engineering in Medicine and Biology Society (EMBC), 2018 40th Annual International Conference of the IEEE.</li><br />
-  <li>Marjaninejad, Ali, Taherian, B., & Valero-Cuevas, F. J. (2017). Finger movements are mainly represented by a linear transformation of energy in band-specific ECoG signals. Engineering in Medicine and Biology Society (EMBC), 2017 39th Annual International Conference of the IEEE, 986–989.</li><br />
+  <li>Marjaninejad, Ali, Taherian, B., & Valero-Cuevas, F. J. (2017). Finger movements are mainly represented by a linear transformation of energy in band-specific ECoG signals. Engineering in Medicine and Biology Society (EMBC), 2017 39th Annual International Conference of the IEEE, 986&#8212;989.</li><br />
   <li>Khazaei, M., Sadat-Hosseini, H., Marjaninejad, A., & Daneshvar, S. (2017). A Radial Basis Function Neural Network approximator with fast terminal sliding mode-based learning algorithm and its application in control systems. 2017 25th Iranian Conference on Electrical Engineering, ICEE 2017. https://doi.org/10.1109/IranianCEE.2017.7985150</li><br />
   <li>Marjaninejad, A., & Finley, J. M. (2016). A model-based exploration of the role of pattern generating circuits during locomotor adaptation. Proceedings of the Annual International Conference of the IEEE Engineering in Medicine and Biology Society, EMBS, 2016-Octob. https://doi.org/10.1109/EMBC.2016.7590630</li><br />
-  <li>Marjaninejad, Ali, Almasganj, F., & Sheikhzadeh, A. J. (2014). Online signal to noise ratio improvement of ECG signal based on EEMD of synchronized ECG beats. Biomedical Engineering (ICBME), 2014 21th Iranian Conference On, 113–118.</li><br />
+  <li>Marjaninejad, Ali, Almasganj, F., & Sheikhzadeh, A. J. (2014). Online signal to noise ratio improvement of ECG signal based on EEMD of synchronized ECG beats. Biomedical Engineering (ICBME), 2014 21th Iranian Conference On, 113&#8212;118.</li><br />
   <li>Marjaninejad, A., & Daneshvar, S. (2014). A low-cost real-time wheelchair navigation system using electrooculography. 22nd Iranian Conference on Electrical Engineering, ICEE 2014. https://doi.org/10.1109/IranianCEE.2014.6999863</li><br />
 </ol> 
 
@@ -119,8 +119,10 @@ li a:hover:not(.active) {
 <h2 style = "font-family:georgia,garamond,serif;font-size:18px;">arXiv pre-prints:</h2>
 <ol style = "font-size:20px";>
   <li>Marjaninejad, Ali, Urbina-Meléndez, D., & Valero-Cuevas, F. J. (2019). Simple Kinematic Feedback Enhances Autonomous Learning in Bio-Inspired Tendon-Driven Systems. ArXiv Preprint ArXiv:1907.04539.</li><br />
-  <li>Cohn, B. A., Shah, D. D., Marjaninejad, A., Shapiro, M., Ulkumen, S., Laine, C. M., … Ingersoll, S. (2018). Quantifying and attenuating pathologic tremor in virtual reality. ArXiv Preprint ArXiv:1809.05970. </li><br />
+  <li>Cohn, B. A., Shah, D. D., Marjaninejad, A., Shapiro, M., Ulkumen, S., Laine, C. M., Valero-Cuevas, F. J., Hayashida, K. H., Ingersoll, S. (2018). Quantifying and attenuating pathologic tremor in virtual reality. ArXiv Preprint ArXiv:1809.05970. </li><br />
 </ol> 
+
+<br /><br /><br /><br /><br /><br />
 
 </div>
 </div>
