Ali updates his page

--- a/marjani/index.html
+++ b/marjani/index.html
@@ -79,10 +79,10 @@ li a:hover:not(.active) {
 
 
 
-<img src="./assets/full_small.jpg" alt="Ali Marjaninejad"  style="float:left;width:420px;height:625px;">
+<img src="./assets/full_small.jpg" alt="Ali Marjaninejad"  style="float:left;width:40%;height:auto;">
 <div class="relative">
-<iframe width="550" height="310" src="https://www.voanews.com/media/2047626/embed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-<iframe width="550" height="310" src="https://www.youtube.com/embed/oe8tgMMdpqg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="57%" height="310" src="https://www.voanews.com/media/2047626/embed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="57%" height="310" src="https://www.youtube.com/embed/oe8tgMMdpqg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h1>Ali Marjaninejad</h1>
 <p style = "font-family:georgia,garamond,serif;font-size:20px;font-style:italic;">
          I am a researcher with interests in Artificial Intelligence, Biology, and the full spectrum between these two!
