--- a/marjani/publications.html
+++ b/marjani/publications.html
@@ -83,9 +83,9 @@ li a:hover:not(.active) {
 <br />
   <table style="width:100%">
   <tr>
-    <th>  <a href="https://scholar.google.com/citations?user=yoAFOfUAAAAJ&hl=en&oi=ao"><img src="./assets/google_scholar_logo.png" width="300" height="85" title="Google Scholar Profile" alt="Google Scholar Profile"></a></th>
-    <th>  <a href="https://publons.com/researcher/3044511/ali-marjaninejad/"><img src="./assets/publons_logo.png" width="280" height="75" title="Publons Profile" alt="Publons Profile"></a></th>
-    <th>  <a href="http://orcid.org/0000-0001-6943-151X"><img src="./assets/orcid_logo.png" width="300" height="85" title="Orcid Profile" alt="Orcid Profile"></a></th>
+    <th>  <a href="https://scholar.google.com/citations?user=yoAFOfUAAAAJ&hl=en&oi=ao"><img src="./assets/google_scholar_logo.png" width="90%" height="auto" title="Google Scholar Profile" alt="Google Scholar Profile"></a></th>
+    <th>  <a href="https://publons.com/researcher/3044511/ali-marjaninejad/"><img src="./assets/publons_logo.png" width="45%" height="auto" title="Publons Profile" alt="Publons Profile"></a></th>
+    <th>  <a href="http://orcid.org/0000-0001-6943-151X"><img src="./assets/orcid_logo.png" width="100%" height="auto" title="Orcid Profile" alt="Orcid Profile"></a></th>
   </tr>
 </table>
 
