--- a/marjani/contact.html
+++ b/marjani/contact.html
@@ -79,7 +79,7 @@ li a:hover:not(.active) {
 
 
 
-<img src="./assets/contact_profile_pic.jpeg" alt="Ali Marjaninejad"  style="float:left;width:400;height:600px;">
+<img src="./assets/contact_profile_pic.jpeg" alt="Ali Marjaninejad"  style="float:left;width:45%;height:auto;">
 <br />
 <p style = "font-family:georgia,garamond,serif;font-size:20px;font-style:italic;"><br />
         &nbsp;   Ronald Tutor Hall, RTH-421<br /><br />
