--- a/marjani/on_the_news.html
+++ b/marjani/on_the_news.html
@@ -77,7 +77,7 @@ li a:hover:not(.active) {
   <li><a href="contact.html">Contact</a></li>
 </ul>
 
-<a href="https://valerolab.org/g2p/"><img src="./assets/nmi_banner.jpg" width="1000" height="286" title="G2P" alt="G2P"></a></td>
+<a href="https://valerolab.org/g2p/"><img src="./assets/nmi_banner.jpg" width="100%" height="auto" title="G2P" alt="G2P"></a></td>
 <h1 style = "font-family:georgia,garamond,serif;font-size:30px;">Below is a list of my news mentions</h1>
 <h2>&#8226; News mentions related to the bio-plausible, autonomous robotics project  </h2>
 <h3>In English</h3>
