fixed a bug in the naming of CV and RESUME files for Ali

--- a/marjani/cv_resume.html
+++ b/marjani/cv_resume.html
@@ -83,8 +83,8 @@ li a:hover:not(.active) {
 <br />
   <table style="width:100%">
   <tr>
-    <th>  <a href="./assets/resume.PDF"><img src="./assets/resume.png" width="25%" height="auto" title="resume" alt="resume"></a></th>
-    <th>  <a href="./assets/cv.PDF"><img src="./assets/cv.png" width="25%" height="auto" title="cv" alt="cv"></a></th>
+    <th>  <a href="./assets/resume.pdf"><img src="./assets/resume.png" width="25%" height="auto" title="resume" alt="resume"></a></th>
+    <th>  <a href="./assets/cv.pdf"><img src="./assets/cv.png" width="25%" height="auto" title="cv" alt="cv"></a></th>
   </tr>
 </table>
 
