--- a/marjani/projects.html
+++ b/marjani/projects.html
@@ -107,7 +107,7 @@ li a:hover:not(.active) {
     <td>  
       <p>
         <h1 style = "font-family:georgia,garamond,serif;font-size:18px;">Biomedical Applications:</h1><br />
-          Applications of data-science and control theory techniques (Machine Learning, Pattern Recognition, and Signal Processing) to biological data and enabling better diagnostics in healthcare, improved treatment and assistive devices<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+          Applications of data science and control theory techniques (Machine Learning, Pattern Recognition, and Signal Processing) to biological data and enabling better diagnostics in healthcare, improved treatment and assistive devices<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
       </p>
     </td>
   </tr>
