--- a/marjani/index.html
+++ b/marjani/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+c<!DOCTYPE html>
 <html>
 <head>
 <style>
@@ -85,7 +85,7 @@ li a:hover:not(.active) {
 <iframe width="57%" height="310" src="https://www.youtube.com/embed/oe8tgMMdpqg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h1>Ali Marjaninejad</h1>
 <p style = "font-family:georgia,garamond,serif;font-size:20px;font-style:italic;">
-         I am a researcher with interests in Artificial Intelligence, Biology, and the full spectrum between these two!
+         I am a researcher with interests in Artificial Intelligence, Neuroscience, and the full spectrum between these two!
       </p>
 </div>
 </div>
