Updated the list of publications

--- a/marjani/publications.html
+++ b/marjani/publications.html
@@ -106,20 +106,23 @@ li a:hover:not(.active) {
 <h2 style = "font-family:georgia,garamond,serif;font-size:18px;">&nbsp;</h2>
 <h2 style = "font-family:georgia,garamond,serif;font-size:18px;">Peer-reviewed Full-length Conference Publications:</h2>
 <ol style = "font-size:20px";>
-  <li>Marjaninejad, Ali, Annigeri, R., & Valero-Cuevas, F. J. (2018). Model-Free Control of Movement in a Tendon-Driven Limb via a Modified Genetic Algorithm. Engineering in Medicine and Biology Society (EMBC), 2018 40th Annual International Conference of the IEEE.</li><br />
-  <li>Marjaninejad, Ali, Berry, J., & Valero-Cuevas, F. J. (2018). An Analytical Approach to Posture-Dependent Muscle Force and Muscle Activation Patterns. Engineering in Medicine and Biology Society (EMBC), 2018 40th Annual International Conference of the IEEE.</li><br />
-  <li>Marjaninejad, Ali, Taherian, B., & Valero-Cuevas, F. J. (2017). Finger movements are mainly represented by a linear transformation of energy in band-specific ECoG signals. Engineering in Medicine and Biology Society (EMBC), 2017 39th Annual International Conference of the IEEE, 986&#8212;989.</li><br />
-  <li>Khazaei, M., Sadat-Hosseini, H., Marjaninejad, A., & Daneshvar, S. (2017). A Radial Basis Function Neural Network approximator with fast terminal sliding mode-based learning algorithm and its application in control systems. 2017 25th Iranian Conference on Electrical Engineering, ICEE 2017. https://doi.org/10.1109/IranianCEE.2017.7985150</li><br />
-  <li>Marjaninejad, A., & Finley, J. M. (2016). A model-based exploration of the role of pattern generating circuits during locomotor adaptation. Proceedings of the Annual International Conference of the IEEE Engineering in Medicine and Biology Society, EMBS, 2016-Octob. https://doi.org/10.1109/EMBC.2016.7590630</li><br />
-  <li>Marjaninejad, Ali, Almasganj, F., & Sheikhzadeh, A. J. (2014). Online signal to noise ratio improvement of ECG signal based on EEMD of synchronized ECG beats. Biomedical Engineering (ICBME), 2014 21th Iranian Conference On, 113&#8212;118.</li><br />
-  <li>Marjaninejad, A., & Daneshvar, S. (2014). A low-cost real-time wheelchair navigation system using electrooculography. 22nd Iranian Conference on Electrical Engineering, ICEE 2014. https://doi.org/10.1109/IranianCEE.2014.6999863</li><br />
+  <li>Dan A. Hagen, Marjaninejad A., & Valero-Cuevas, F. J. (2020). A Bio-Inspired Framework for Joint Angle Estimation from Non-Collocated Sensors in Tendon-Driven Systems. IEEE/RSJ International Conference on Intelligent Robots and Systems (IEEE IROS).</li><br />
+  <li>Marjaninejad, Ali, Tan, J., & Valero-Cuevas, F. J. (2020). Autonomous Control of a Tendon-driven Robotic Limb with Elastic Elements Reveals that Added Elasticity can Enhance Learning. IEEE Engineering in Medicine and Biology Society (IEEE EMBC).</li><br />
+  <li>Marjaninejad, Ali, Urbina-Meléndez, D., & Valero-Cuevas, F. J. (2020). Simple Kinematic Feedback Enhances Autonomous Learning in Bio-Inspired Tendon-Driven Systems. IEEE Engineering in Medicine and Biology Society (IEEE EMBC).</li><br />
+  <li>Marjaninejad, Ali, Annigeri, R., & Valero-Cuevas, F. J. (2018). Model-Free Control of Movement in a Tendon-Driven Limb via a Modified Genetic Algorithm. IEEE Engineering in Medicine and Biology Society (IEEE EMBC).</li><br />
+  <li>Marjaninejad, Ali, Berry, J., & Valero-Cuevas, F. J. (2018). An Analytical Approach to Posture-Dependent Muscle Force and Muscle Activation Patterns. IEEE Engineering in Medicine and Biology Society (IEEE EMBC).</li><br />
+  <li>Marjaninejad, Ali, Taherian, B., & Valero-Cuevas, F. J. (2017). Finger movements are mainly represented by a linear transformation of energy in band-specific ECoG signals. IEEE Engineering in Medicine and Biology Society (IEEE EMBC).</li><br />
+  <li>Khazaei, M., Sadat-Hosseini, H., Marjaninejad, A., & Daneshvar, S. (2017). A Radial Basis Function Neural Network approximator with fast terminal sliding mode-based learning algorithm and its application in control systems. IEEE 25th Iranian Conference on Electrical Engineering (IEEE ICEE), 2017. </li><br />
+  <li>Marjaninejad, A., & Finley, J. M. (2016). A model-based exploration of the role of pattern generating circuits during locomotor adaptation. IEEE Engineering in Medicine and Biology Society (IEEE EMBC)</li><br />
+  <li>Marjaninejad, Ali, Almasganj, F., & Sheikhzadeh, A. J. (2014). Online signal to noise ratio improvement of ECG signal based on EEMD of synchronized ECG beats. IEEE Iranian Conference on Biomedical Engineering (IEEE ICBME).</li><br />
+  <li>Marjaninejad, A., & Daneshvar, S. (2014). A low-cost real-time wheelchair navigation system using electrooculography. IEEE Iranian Conference on Electrical Engineering, (IEEE ICEE). </li><br />
 </ol> 
 
 <h2 style = "font-family:georgia,garamond,serif;font-size:18px;">&nbsp;</h2>
-<h2 style = "font-family:georgia,garamond,serif;font-size:18px;">arXiv pre-prints:</h2>
+<h2 style = "font-family:georgia,garamond,serif;font-size:18px;">arXiv:</h2>
 <ol style = "font-size:20px";>
-  <li>Marjaninejad, Ali, Urbina-Meléndez, D., & Valero-Cuevas, F. J. (2019). Simple Kinematic Feedback Enhances Autonomous Learning in Bio-Inspired Tendon-Driven Systems. ArXiv Preprint ArXiv:1907.04539.</li><br />
-  <li>Cohn, B. A., Shah, D. D., Marjaninejad, A., Shapiro, M., Ulkumen, S., Laine, C. M., Valero-Cuevas, F. J., Hayashida, K. H., Ingersoll, S. (2018). Quantifying and attenuating pathologic tremor in virtual reality. ArXiv Preprint ArXiv:1809.05970. </li><br />
+  <li>Romina Mir, Marjaninejad, A., & Valero-Cuevas, F. J. (2020). The utility of tactile force to autonomous learning of in-hand manipulation is task-dependent. arXiv:2002.02418.</li><br />
+  <li>Brian A. Cohn, Shah, D. D., Marjaninejad, A., Shapiro, M., Ulkumen, S., Laine, C. M., Valero-Cuevas, F. J., Hayashida, K. H., Ingersoll, S. (2018). Quantifying and attenuating pathologic tremor in virtual reality. arXiv:1809.05970. </li><br />
 </ol> 
 
 <br /><br /><br /><br /><br /><br />
