--- a/marjani/publications.html
+++ b/marjani/publications.html
@@ -90,7 +90,7 @@ li a:hover:not(.active) {
 </table>
 
 <h2 style = "font-family:georgia,garamond,serif;font-size:18px;">&nbsp;</h2>
-<h2 style = "font-family:georgia,garamond,serif;font-size:18px;">Journal Publications:</h2>
+<h2 style = "font-family:georgia,garamond,serif;font-size:18px;">Peer-reviewed Journal Publications:</h2>
 <ol style = "font-size:20px";>
   <li>Marjaninejad, A., Urbina-Meléndez, D., Cohn, B. A., & Valero-Cuevas, F. J. (2019). Autonomous functional movements in a tendon-driven limb via limited experience. Nature Machine Intelligence, 1(3), 144&#8212;154. https://doi.org/10.1038/s42256-019-0029-0</li><br />
   <li>Khazaei, M., Geramipour, A. H., Sadat-Hosseini, S. H., & Marjaninejad, A. (2018). Blood Glucose Regulation Using Adaptive Fuzzy Sliding Mode Control in Type I Diabetic Patients. Int J Mechatron Electr Comput Technol, 8(28), 3833&#8212;3846.</li><br />
