Added Latest publication to the front page
An image of the cover of the Journal of Physiology July 2021 has been put on index.html which leads to "Temporal control of muscle synergies is linked with alpha-band neural drive" when clicked

--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@ layout: default
   <table style="width:100%">
   <tr>
     <th><a href="fundamentals"><img width=47% style="float:center" src="img/book_cover.png"></a></th>
-    <th>  <a href="g2p"><img width=100% style="float:center" src="img/nmi.png"></a></th> 
+    <th>  <a href="g2p"><img width=100% style="float:center" src="img/nmi.png"></a></th>
     <th>  <a href="supplemental_sites/feasibility_theory_frontiers_2018"><img width=65% style="float:center" src="img/feasibility_button.png"></a></th>
+
   </tr>
-  
+
+  <table style="width:100%" style="float:center">
+  <tr>
+    <th>  <a href="Papers/Laine_Cohn_Valero-Cuevas_JPhys2021.pdf"><img width = 25% style="float:center" src="img/JournalofPhysiology.png"></a></th>
+  </tr>
+
 </table>
 
   </br></br>
