--- a/marjani/index.html
+++ b/marjani/index.html
@@ -82,7 +82,7 @@ li a:hover:not(.active) {
 <img src="./assets/full_small.jpg" alt="Ali Marjaninejad"  style="float:left;width:40%;height:auto;">
 <div class="relative">
 <iframe width="57%" height="310" src="https://www.voanews.com/embed/player/0/4907996.html?type=video" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-/* old voa src link src="https://www.voanews.com/media/2047626/embed" */
+<!-- old voa src link src="https://www.voanews.com/media/2047626/embed" -->
 <iframe width="57%" height="310" src="https://www.youtube.com/embed/oe8tgMMdpqg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <h1>Ali Marjaninejad</h1>
 <p style = "font-family:georgia,garamond,serif;font-size:19px;font-style:italic;">
