--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@ layout: default
 
   <div style="padding-bottom:40px">
     <center><b>Welcome to the Brain-Body Dynamics Lab</b></center>
-
-  Our laboratory is dedicated to understanding the biomechanics, neuromuscular control and clinical rehabilitation of human mobility, with an emphasis on dexterous hand function. Towards this end, we employ a synergy of experimental and theoretical techniques.
+  Our laboratory is dedicated to understanding the biomechanics, neuromuscular control, and clinical rehabilitation of human mobility, with an emphasis on translation to robotics and Artificial Intelligence. Towards this end, we employ a synergy of experimental and theoretical techniques. 
+  Our diverse experimental arsenal ranges from physiological recordings, computational models, machine learning, and neuromorphic computing. These procedures in turn inform theoretical work and devices to restore sensorimotor function for rehabilitation, and create neuro-inspired robots, circuits, and algorithms.
+  <!--Our laboratory is dedicated to understanding the biomechanics, neuromuscular control and clinical rehabilitation of human mobility, with an emphasis on dexterous hand function. Towards this end, we employ a synergy of experimental and theoretical techniques.
   Our diverse experimental arsenal ranges from EMG recording and custom-made virtual reality modules, detailed characterization of multifinger structure and function, to mapping the function of the human brain with fMRI. These procedures in turn inform theoretical work to characterize complex sensorimotor function through rigorous and anatomically faithful mathematical models.
-  <table style="width:100%">
+  -->  
+<table style="width:100%">
   <tr>
     <th><a href="fundamentals"><img width=47% style="float:center" src="img/book_cover.png"></a></th>
     <th>  <a href="g2p"><img width=100% style="float:center" src="img/nmi.png"></a></th>
