--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 <div class="home">
 
   <div style="padding-bottom:40px">
-    <center><b>Welcome to the Brain-Body Dynamics Lab</b></center>
+    <center><b>Welcome to the Valero Lab!</b></center>
   Our laboratory is dedicated to understanding the biomechanics, neuromuscular control, and clinical rehabilitation of human mobility, with an emphasis on translation to robotics and Artificial Intelligence. Towards this end, we employ a synergy of experimental and theoretical techniques. 
   Our diverse experimental arsenal ranges from physiological recordings, computational models, machine learning, and neuromorphic computing. These procedures in turn inform theoretical work and devices to restore sensorimotor function for rehabilitation, and create neuro-inspired robots, circuits, and algorithms.
   <!--Our laboratory is dedicated to understanding the biomechanics, neuromuscular control and clinical rehabilitation of human mobility, with an emphasis on dexterous hand function. Towards this end, we employ a synergy of experimental and theoretical techniques.
