--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@ layout: default
   </tr>
 
 </table>
+  
+  Valero-Cuevas FJ, Erwin A. Bio-robots step towards brain–body co-adaptation. Nature Machine Intelligence, 2022<br>
+  <b><a href="../Papers/2022_Valero-Cuevas_Erwin_NMI_News_and_Views.pdf">
+  NMI News and Views</a></b><br>
 
   </br></br>
   <b> General to Particular Algorithm (G2P) </b></br>
