--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@ layout: default
   
   <br>
   <b>Valero-Cuevas FJ, Erwin A. Bio-robots step towards brain–body co-adaptation. Nature Machine Intelligence, 2022</b><br>
-  <a href="../Papers/2022_Valero-Cuevas_Erwin_NMI_News_and_Views.pdf">
-  NMI News and Views</a><br>
+  <a href="../Papers/2022_Valero-Cuevas_Erwin_NMI_News_and_Views.pdf"><img width=50% src="img/dogmirror.png"></a><br>
 
   </br></br>
   <b> General to Particular Algorithm (G2P) </b></br>
