--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ layout: default
 </table>
   
   <br>
-  <b>Valero-Cuevas FJ, Erwin A. Bio-robots step towards brain–body co-adaptation. Nature Machine Intelligence, 2022</b><br>
+  <b>Valero-Cuevas FJ, Erwin A. <a href="../Papers/2022_Valero-Cuevas_Erwin_NMI_News_and_Views .pdf">Bio-robots step towards brain–body co-adaptation.</a> Nature Machine Intelligence, 2022</b><br>
   <a href="../Papers/2022_Valero-Cuevas_Erwin_NMI_News_and_Views .pdf"><img width=50% src="img/dogmirror.png"></a><br>
 
   </br></br>
