Adding Niyo's PNAS
Adding image and link to companion page

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ layout: default
     <th><a href="fundamentals"><img width=47% style="float:center" src="img/book_cover.png"></a></th>
     <th>  <a href="g2p"><img width=100% style="float:center" src="img/nmi.png"></a></th>
     <th>  <a href="supplemental_sites/feasibility_theory_frontiers_2018"><img width=65% style="float:center" src="img/feasibility_button.png"></a></th>
+    <th>  <a href="supplemental_sites/niyo_pnas"><img width=65% style="float:center" src="img/2024_Niyo_PNAS_CompanionPage_Image_with_citation.png"></a></th>
+
 
   </tr>
 
