--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
   <table style="width:100%" style="float:center">
   <tr>
     <th>  <a href="Papers/Laine_Cohn_Valero-Cuevas_JPhys2021.pdf"><img width = 47% style="float:center" src="img/JournalofPhysiology.png"></a></th>
-    <th>  <a href="supplemental_sites/a2g_2024"><img width=52% style="float:center" src="img/2024_Niyo_PNAS_CompanionPage_Image_with_citation (1).png"></a></th>
+    <th>  <a href="supplemental_sites/a2g_2024"><img width=52% style="float:center" src="img/2024_Niyo_PNAS_CompanionPage_Image_with_citation (1).png" alt="Rendering of a motoneuron in the spinal cord which activates your muscles, image credit: Jarrod Chatham"></a></th>
 
   </tr>
 
@@ -35,7 +35,7 @@ layout: default
   
   <br>
   <b>Valero-Cuevas FJ, Erwin A. <a href="../Papers/2022_Valero-Cuevas_Erwin_NMI_News_and_Views.pdf">Bio-robots step towards brain–body co-adaptation.</a> Nature Machine Intelligence, 2022</b><br>
-  <a href="../Papers/2022_Valero-Cuevas_Erwin_NMI_News_and_Views.pdf"><img width=50% src="img/dogmirror.png"></a><br>
+  <a href="../Papers/2022_Valero-Cuevas_Erwin_NMI_News_and_Views.pdf"><img width=50% src="img/dogmirror.png" alt="A cartoon image of a robotic dog looking into a mirror. The mirror's reflection shows a golden retriever dog looking back at the robot dog."></a><br>
 
   </br></br>
   <b> General to Particular Algorithm (G2P) </b></br>
