--- a/index.html
+++ b/index.html
@@ -10,17 +10,19 @@ layout: default
   <!--Our laboratory is dedicated to understanding the biomechanics, neuromuscular control and clinical rehabilitation of human mobility, with an emphasis on dexterous hand function. Towards this end, we employ a synergy of experimental and theoretical techniques.
   Our diverse experimental arsenal ranges from EMG recording and custom-made virtual reality modules, detailed characterization of multifinger structure and function, to mapping the function of the human brain with fMRI. These procedures in turn inform theoretical work to characterize complex sensorimotor function through rigorous and anatomically faithful mathematical models.
   -->  
-<table style="width: 100%; text-align: center;">
+
+<table style="width:100%" style="float:center>
   <tr>
-    <th><a href="fundamentals"><img src="img/book_cover.png" style="width: 54%; margin: auto;" alt="Book cover of Fundamentals of Neuromechanics by Francisco J. Valero-Cuevas"></a></th>
-    <th><a href="g2p"><img src="img/nmi.png" style="width: 100%; margin: auto;" alt="The cover image of Nature Machine Intelligence from March 2019 that shows a robotic tendon-driven limb with a caption that reads, 'Walk this way.'"></a></th>
-    <th><a href="supplemental_sites/feasibility_theory_frontiers_2018"><img src="img/feasibility_button.png" style="width: 54%; margin: auto;"></a></th>
+    <th><a href="fundamentals"><img src="img/book_cover.png width=52% style="float:center" alt="Book cover of Fundamentals of Neuromechanics by Francisco J. Valero-Cuevas"></a></th>
+    <th>  <a href="g2p"><img src="img/nmi.png" width=100% style="float:center" alt="The cover image of Nature Machine Intelligence from March 2019 that shows a robotic tendon-driven limb with a caption that reads, 'Walk this way.'"></a></th>
+    <th>  <a href="supplemental_sites/feasibility_theory_frontiers_2018"><img src="img/feasibility_button.png" width=54% style="float:center"></a></th>
   </tr>
 
   <tr>
-    <th><a href="Papers/Laine_Cohn_Valero-Cuevas_JPhys2021.pdf"><img src="img/JournalofPhysiology.png" style="width: 47%; margin: auto;" alt="The cover image of the Journal of Physiology from July 2021 that shows a rendering of an arm turning a crank."></a></th>
-    <th><a href="supplemental_sites/a2g_2024"><img src="img/2024_Niyo_PNAS_CompanionPage_Image_with_citation (1).png" style="width: 52%; margin: auto;" alt="Rendering of a motoneuron in the spinal cord which activates your muscles, image credit: Jarrod Chatham"></a></th>
+    <th>  <a href="Papers/Laine_Cohn_Valero-Cuevas_JPhys2021.pdf"><img src="img/JournalofPhysiology.png" width = 47% style="float:center" alt="The cover image of the Journal of Physiology from July 2021 that shows a rendering of an arm turning a crank."></a></th>
+    <th>  <a href="supplemental_sites/a2g_2024"><img src="img/2024_Niyo_PNAS_CompanionPage_Image_with_citation (1).png" width=52% style="float:center" alt="Rendering of a motoneuron in the spinal cord which activates your muscles, image credit: Jarrod Chatham"></a></th>
   </tr>
+
 </table>
  
   
