fixing images sizes

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ layout: default
   Our diverse experimental arsenal ranges from EMG recording and custom-made virtual reality modules, detailed characterization of multifinger structure and function, to mapping the function of the human brain with fMRI. These procedures in turn inform theoretical work to characterize complex sensorimotor function through rigorous and anatomically faithful mathematical models.
   -->  
 
-<table style="width:100%" style="float:center>
+<table style="width:100%" style="float:center">
   <tr>
-    <th><a href="fundamentals"><img src="img/book_cover.png width=52% style="float:center" alt="Book cover of Fundamentals of Neuromechanics by Francisco J. Valero-Cuevas"></a></th>
-    <th>  <a href="g2p"><img src="img/nmi.png" width=100% style="float:center" alt="The cover image of Nature Machine Intelligence from March 2019 that shows a robotic tendon-driven limb with a caption that reads, 'Walk this way.'"></a></th>
+    <th><a href="fundamentals"><img src="img/book_cover.png" width=52% style="float:center" alt="Book cover of Fundamentals of Neuromechanics by Francisco J. Valero-Cuevas"></a></th>
+    <th>  <a href="g2p"><img src="img/nmi.png" width=50% style="float:center" alt="The cover image of Nature Machine Intelligence from March 2019 that shows a robotic tendon-driven limb with a caption that reads, 'Walk this way.'"></a></th>
     <th>  <a href="supplemental_sites/feasibility_theory_frontiers_2018"><img src="img/feasibility_button.png" width=54% style="float:center"></a></th>
   </tr>
 
