Adding link to DARE website

--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@ layout: default
   <br>
   <b>General to Particular Algorithm (G2P)</b><br>
   <a href="/g2p/" target="_blank">Companion website to Nature Machine Intelligence Paper</a>
+
+  <br>
+  <b>NSF DARE Conference: Transformative Opportunities for Modeling in Neurorehabilitation</b><br>
+  <a href="https://dare2023.usc.edu/" target="_blank">Conference website</a>
 <br>
 
 
