adding space after paragraph

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: default
 
   <br>
   <b>General to Particular Algorithm (G2P)</b><br>
-  <a href="/g2p/" target="_blank">Companion website to Nature Machine Intelligence Paper</a>
+  <a href="/g2p/" target="_blank">Companion website to Nature Machine Intelligence Paper</a><br>
 
   <br>
   <b>NSF DARE Conference: Transformative Opportunities for Modeling in Neurorehabilitation</b><br>
