Adding Romina's Science Advances

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ layout: default
 
 <table style="width: 100%; text-align: center;">
   <tr>
+    <th><a href="Papers/2025_Ojaghi_Mir_Manipulation_Science_Advances.pdf" target="_blank"><img src="img/mir_manipulation.jpg" alt="Image of a hand manipulating a ball, made by Romina Mir and Anastasia Kozlova using Midjourney, Photoshop and Figma."></th>
+  </tr>
+  <tr>
     <th> <a href="supplemental_sites/a2g_2024" target="_blank"><img src="img/2024_Niyo_PNAS_CompanionPage_Image_with_citation (1).png" width=52% style="float:center" alt="Rendering of a motoneuron in the spinal cord which activates your muscles, image credit: Jarrod Chatham"></a></th>
     <th> <a href="../Papers/2022_Valero-Cuevas_Erwin_NMI_News_and_Views.pdf" target="_blank"><img src="img/dogmirror.png" width=100% style="float:center" alt="A cartoon image of a robotic dog looking into a mirror. The mirror's reflection shows a golden retriever dog looking back at the robot dog."></a></th>
     <th> <a href="Papers/Laine_Cohn_Valero-Cuevas_JPhys2021.pdf" target="_blank"><img src="img/JournalofPhysiology.png" width=47% style="float:center" alt="The cover image of the Journal of Physiology from July 2021 that shows a rendering of an arm turning a crank."></a></th>
