changing img alignment

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ layout: default
 
 <table style="width: 100%; text-align: center;">
   <tr>
-    <th><a href="Papers/2025_Ojaghi_Mir_Manipulation_Science_Advances.pdf" target="_blank"><img src="img/mir_manipulation.jpg" alt="Image of a hand manipulating a ball, made by Romina Mir and Anastasia Kozlova using Midjourney, Photoshop and Figma."></th>
+    <th><a href="Papers/2025_Ojaghi_Mir_Manipulation_Science_Advances.pdf" target="_blank"><img src="img/mir_manipulation.jpg" style="float:center" alt="Image of a hand manipulating a ball, made by Romina Mir and Anastasia Kozlova using Midjourney, Photoshop and Figma."></th>
   </tr>
   <tr>
     <th> <a href="supplemental_sites/a2g_2024" target="_blank"><img src="img/2024_Niyo_PNAS_CompanionPage_Image_with_citation (1).png" width=52% style="float:center" alt="Rendering of a motoneuron in the spinal cord which activates your muscles, image credit: Jarrod Chatham"></a></th>
