--- a/index.html
+++ b/index.html
@@ -11,20 +11,25 @@ layout: default
   Our diverse experimental arsenal ranges from EMG recording and custom-made virtual reality modules, detailed characterization of multifinger structure and function, to mapping the function of the human brain with fMRI. These procedures in turn inform theoretical work to characterize complex sensorimotor function through rigorous and anatomically faithful mathematical models.
   -->  
 
-<table style="width: 100%; text-align: center;">
+<table style="width: 100%; text-align: center;"
   <tr>
-    <th><a href="Papers/2025_Ojaghi_Mir_Manipulation_Science_Advances.pdf" target="_blank"><img src="img/mir_manipulation.jpg" style="float:center" alt="Image of a hand manipulating a ball, made by Romina Mir and Anastasia Kozlova using Midjourney, Photoshop and Figma."></th>
+    <th colspan="3">
+      <a href="Papers/2025_Ojaghi_Mir_Manipulation_Science_Advances.pdf" target="_blank">
+        <img src="img/mir_manipulation.jpg" style="display: block; margin: 0 auto;" alt="Image of a hand manipulating a ball, made by Romina Mir and Anastasia Kozlova using Midjourney, Photoshop and Figma.">
+      </a>
+    </th>
   </tr>
+
   <tr>
     <th> <a href="supplemental_sites/a2g_2024" target="_blank"><img src="img/2024_Niyo_PNAS_CompanionPage_Image_with_citation (1).png" width=52% style="float:center" alt="Rendering of a motoneuron in the spinal cord which activates your muscles, image credit: Jarrod Chatham"></a></th>
-    <th> <a href="../Papers/2022_Valero-Cuevas_Erwin_NMI_News_and_Views.pdf" target="_blank"><img src="img/dogmirror.png" width=100% style="float:center" alt="A cartoon image of a robotic dog looking into a mirror. The mirror's reflection shows a golden retriever dog looking back at the robot dog."></a></th>
-    <th> <a href="Papers/Laine_Cohn_Valero-Cuevas_JPhys2021.pdf" target="_blank"><img src="img/JournalofPhysiology.png" width=47% style="float:center" alt="The cover image of the Journal of Physiology from July 2021 that shows a rendering of an arm turning a crank."></a></th>
+    <th> <a href="../Papers/2022_Valero-Cuevas_Erwin_NMI_News_and_Views.pdf" target="_blank"><img src="img/dogmirror.png" width=100% alt="A cartoon image of a robotic dog looking into a mirror. The mirror's reflection shows a golden retriever dog looking back at the robot dog."></a></th>
+    <th> <a href="Papers/Laine_Cohn_Valero-Cuevas_JPhys2021.pdf" target="_blank"><img src="img/JournalofPhysiology.png" width=47% alt="The cover image of the Journal of Physiology from July 2021 that shows a rendering of an arm turning a crank."></a></th>
   </tr>
 
   <tr>
     <th> <a href="g2p" target="_blank"><img src="img/nmi.png" width=50% style="float:center" alt="The cover image of Nature Machine Intelligence from March 2019 that shows a robotic tendon-driven limb with a caption that reads, 'Walk this way.'"></a></th>
-    <th> <a href="supplemental_sites/feasibility_theory_frontiers_2018" target="_blank"><img src="img/feasibility_button.png" width=58% style="float:center"></a></th>
-    <th> <a href="fundamentals" target="_blank"><img src="img/book_cover.png" width=45% style="float:center" alt="Book cover of Fundamentals of Neuromechanics by Francisco J. Valero-Cuevas"></a></th>
+    <th> <a href="supplemental_sites/feasibility_theory_frontiers_2018" target="_blank"><img src="img/feasibility_button.png" width=58%></a></th>
+    <th> <a href="fundamentals" target="_blank"><img src="img/book_cover.png" width=45% alt="Book cover of Fundamentals of Neuromechanics by Francisco J. Valero-Cuevas"></a></th>
   </tr>
 
 </table>
