fixing img size

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
   <tr>
     <th colspan="3">
       <a href="Papers/2025_Ojaghi_Mir_Manipulation_Science_Advances.pdf" target="_blank">
-        <img src="img/mir_manipulation.jpg" style="display: block; margin: 0 auto;" alt="Image of a hand manipulating a ball, made by Romina Mir and Anastasia Kozlova using Midjourney, Photoshop and Figma.">
+        <img src="img/mir_manipulation.jpg" width=40% style="display: block; margin: 0 auto;" alt="Image of a hand manipulating a ball, made by Romina Mir and Anastasia Kozlova using Midjourney, Photoshop and Figma.">
       </a>
     </th>
   </tr>
